dummy-site/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-site-example-com-svc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: dummy-site-example-com
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 1234
